$Id$

1.2.2
	Added the 'search' command.
	'/' is a keybinding for 'search'
	'?' is a keybinding for 'search -r'
	Fixed stristr, which was completely broken
	renamed owl_fmtext_ztext_stylestrip to owl_function_ztext_styletsrip
	     and put it in functions.c

1.2.1
        New framework for command handling.
        New framework for keymap handling.
        Added commands for everything that is bound 
             to a key (do 'show commands' to get the full list).
        Added 'multi' and '(' commands to allow multiple commands
             to be specified on a line.              
        Added user keybindings with bindkey command.
        Added command aliases (eg, "alias foo bar").
        Added undelete command that parallels the delete command.
        Added additional options to delete command.
        The reply command now takes arguments.
        Added 'edit:insert-text' command.
        Added 'show zpunts' to show active punt filters.
        Added 'show variable <name>' and 'show variables'.
        Added 'show command <name>' and 'show commands'.
        Added 'show keymap <name>' and 'show keymaps'.
        Added 'M-u' to undelete all messages in current view.
        Fixed dotsend so that the zephyr will still send if there
             is whitespace after the dot but not on the same line.
             This should resolve an issue where dotsend wouldn't work
             if you'd gone up and edited a zephyr.
	Bug in page down fixed
	C-t will transpose characters
        Fix the scrolling bug where we would sometimes fail to scroll
             the screen down, leaving the current message off 
             the bottom of the screen.
        Refixed 'login or login' typo in help
        Fixed M-u description
        Removed 'first' and 'last' from basic command help
        Added M-N to basic key help
        Added M-D, M-u to basic key help
        Fixed a quoting problem in configure.in
        Changed top of help to use 'show' instead of M-x